# goskill

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_EN.md  RELEASE.md  SECURITY.md  SKILL.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
examples/: basic_usage.py
goskill/: __init__.py  cli.py  core.py  criteria.py
tests/: test_goskill.py
