[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goskill"
version = "1.0.0"
description = "Goal-driven long-running task helper for OpenClaw-style workflows"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Andy (AI PM)", email = "andy@aipm.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/AIPMAndy/goskill"
Repository = "https://github.com/AIPMAndy/goskill"
Issues = "https://github.com/AIPMAndy/goskill/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
goskill = "goskill.cli:main"

[tool.setuptools]
packages = ["goskill"]
